First launch edition finished

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to the portfolio website of Rob Arkesteijn. Here you will find a curated selection of my best projects, including my skills, background information, and the projects I want to work on in the future."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/ff6fb3a53c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-    <title>React App</title>
+    <title>The Portfolio of Rob Arkesteijn</title>
   </head>
   <body>
     <div id="root"></div>
